--- a/src/components/admin/admin.component.html
+++ b/src/components/admin/admin.component.html
@@ -47,11 +47,11 @@
                             </div>
                         </div>
                     </div>
-                    <mat-action-row>
+                    <mat-action-row class="mat-action-row">
                         <button mat-button color="warn" (click)="openReminderDialogue(assessment)">
                             <mat-icon>email</mat-icon> Send Reminder
                         </button>
-                        <button mat-button (click)="generateSelfAssessmentReport(assessment.selfAssessmentId)">
+                        <button mat-button (click)="generateSelfAssessmentReport(assessment)">
                             <mat-icon>assessment</mat-icon> Generate Self-Awareness Report
                         </button>
                     </mat-action-row>
