--- a/src/components/peer-assessment/peer-assessment.component.html
+++ b/src/components/peer-assessment/peer-assessment.component.html
@@ -7,9 +7,10 @@
       <div class="col-md-12 mat-headline">Peer Self-Assessment</div>
       <div class="col-md-12 div-contacts-message-p">
         <p>
-          Congratulations! You've been selected to help [ins name here] understand who they are just a little bit better.
-          To do so, please fill out the peer assessment. All answers with the
-          exception of the explaination answers are required, however, they are greatly encouraged.
+          Congratulations! <b>{{peerAssessment.selfUserFullName}}</b> has asked you help them in their journey toward self-awareness.
+          To do so, please fill out the peer assessment which will be used to compare with their self assessment. 
+          All answers except the explaination answers are required, however, they are greatly encouraged.
+          <br>Thank you!
         </p>
       </div>
     </div>
