--- a/src/components/admin/admin.component.html
+++ b/src/components/admin/admin.component.html
@@ -37,12 +37,12 @@
                             *ngFor="let peerAssessment of peerAssessments | filterArray:assessment.selfAssessmentId">
                             <p>{{peerAssessment.fullName}} | {{peerAssessment.emailAddress}}&nbsp;&nbsp;</p>
                             <div style="color:green" *ngIf="peerAssessment.completed">
-                                <mat-icon>done</mat-icon>
+                                <mat-icon matTooltip="Most Recent Mail: {{peerAssessment?.lastMailDate}}">done</mat-icon>
                             </div>
                             <div style="color:orange" *ngIf="!peerAssessment.completed">
-                                <mat-icon>pending_actions</mat-icon>
+                                <mat-icon matTooltip="Most Recent Mail: {{peerAssessment?.lastMailDate}}">pending_actions</mat-icon>
                             </div>
-                            <div style="color:red" *ngIf="peerAssessment.lastMailError !== ''">
+                            <div style="color:red" *ngIf="peerAssessment.lastMailError && peerAssessment.lastMailError !== ''">
                                 <mat-icon matTooltip="{{peerAssessment.lastMailError}}">error</mat-icon>
                             </div>
                         </div>
