--- a/src/components/peer-assessment/peer-assessment.component.html
+++ b/src/components/peer-assessment/peer-assessment.component.html
@@ -27,7 +27,7 @@
       <div class="form-row justify-content-center">
         <div class="col-md-7">
           <button mat-raised-button type="submit" [disabled]="!form.valid">Finish</button>
-          <button mat-raised-button type="submit">Finish</button>
+          <!-- required fields bypass<button mat-raised-button type="submit">Finish</button> -->
         </div>
       </div>
       <br /><br /><br />
