--- a/src/components/login/login.component.html
+++ b/src/components/login/login.component.html
@@ -15,9 +15,9 @@
                             (signInFailure)="errorCallback($event)">
                         </firebase-ui>
                         <p class="mat-small mat-card-p"><br>
-                            If this is your first time logging in and you wish to use a non-Google email address,
+                            If this is your first time logging in and you wish to use a non-Google or Facebook email address,
                             you can register by clicking <b>Sign in with email</b>.
-                            You will be asked to provide your full name and email address.
+                            You will be asked to provide your email address and full name.
 
                             <br /><br /><br />Visit our Privacy Policy <a
                                 href="https://www.privacypolicies.com/live/29eac93e-516e-40d1-a0e3-15514dd44810">Here.</a>
