--- a/src/components/self-assessment/self-assessment.component.html
+++ b/src/components/self-assessment/self-assessment.component.html
@@ -23,7 +23,7 @@
       <br /><br />
       <div class="form-row">
         <button mat-raised-button type="submit" [disabled]="!form.valid || submitted">Finish</button>
-        <button mat-raised-button type="submit" [disabled]="submitted">Finish</button>
+        <!-- required fields bypass <button mat-raised-button type="submit" [disabled]="submitted">Finish</button> -->
       </div>
       <br /><br /><br />
     </form>
