--- a/src/components/admin/admin.component.html
+++ b/src/components/admin/admin.component.html
@@ -59,6 +59,9 @@
                         <button mat-button color="warn" (click)="openReminderDialogue(assessment)">
                             <mat-icon>email</mat-icon> Send Reminder
                         </button>
+                        <button mat-button (click)="openAllAnswers(assessment)">
+                            <mat-icon>question_answer</mat-icon> View Answers
+                        </button>
                     </mat-action-row>
                 </mat-expansion-panel>
             </mat-accordion>
